Update for 1.21.2-rc1